fix(Fellows summary card):add cosistent spacing (#98)
-adjust the spacing on the fellows summary card to ensur consistncy

[finishes #162756855 ]

--- a/src/components/Filters/Filters.css
+++ b/src/components/Filters/Filters.css
@@ -35,7 +35,7 @@
   font-family: 'DIN Pro';
   font-size: 18px;
   line-height: 23px;
-  margin: 15px 42px 10px 25px;
+  padding: 15px 42px 10px 25px;
   text-align: left;
 }
 
